--- a/demo-eureka/src/main/resources/application.yml
+++ b/demo-eureka/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
+  profiles: single
   application:
     name: demo-eureka
-  profiles: single
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    joda-date-time-format: yyyy-MM-dd HH:mm:ss
+    locale: zh_CN
+    time-zone: GMT+8
 server:
   port: ${serverPort}
 eureka:
@@ -9,16 +14,25 @@ eureka:
     appname: ${spring.application.name}
     hostname: ${hostName}
     instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 5000
 ---
 spring:
+  profiles: multiple
   application:
     name: demo-eureka
-  profiles: multiple
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    joda-date-time-format: yyyy-MM-dd HH:mm:ss
+    locale: zh_CN
+    time-zone: GMT+8
 server:
   port: ${serverPort}
 eureka:
@@ -26,6 +40,10 @@ eureka:
     appname: ${spring.application.name}
     hostname: ${hostName}
     instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: ${eurekaServerUrl}
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 5000
