--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.youken</groupId>
-	<artifactId>demo-parent</artifactId>
+	<groupId>com.youken.demo</groupId>
+	<artifactId>parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -24,7 +24,7 @@
 	</properties>
 
 	<modules>
-		<module>demo-eureka</module>
+		<module>eureka-service</module>
 	</modules>
 
 	<dependencies>
