--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -13,11 +13,11 @@ eureka:
   instance:
     appname: ${spring.application.name}
     hostname: ${hostName}
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
     prefer-ip-address: true
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    register-with-eureka: false
+    fetch-registry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
@@ -39,7 +39,7 @@ eureka:
   instance:
     appname: ${spring.application.name}
     hostname: ${hostName}
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
     prefer-ip-address: true
   client:
     serviceUrl:
