--- a/yk-core/pom.xml
+++ b/yk-core/pom.xml
@@ -168,6 +168,12 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>1.12.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
