--- a/yk-core/pom.xml
+++ b/yk-core/pom.xml
@@ -211,6 +211,12 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.1.9.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
